# LakeMind

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LakeMind MVP阶段技术改造方案.md  README.md  README_agent.md  docker-bake.hcl  docker-compose.build.yml  docker-compose.yml
LakeMindAssetMCP/: docker-compose.yml  pyproject.toml
LakeMindAssetMCP/config/: config.yaml
LakeMindAssetMCP/src/lakemind_asset_mcp/: __main__.py  config.py  health.py  server.py
LakeMindAssetMCP/src/lakemind_asset_mcp/assets/: registry.py
LakeMindAssetMCP/src/lakemind_asset_mcp/engines/: dragonfly.py  embedding.py  (+2 more)
LakeMindDataMCP/: docker-compose.yml  pyproject.toml
LakeMindDataMCP/config/: config.yaml
LakeMindDataMCP/src/lakemind_data_mcp/: __main__.py  config.py  context.py  server.py  server_client.py
LakeMindMCP/: .dockerignore  Dockerfile  LakeMindMCP MVP开发方案.md  LakeMindMCP设计方案MVP.md  LakeMind简介.md  README.md  docker-compose.yml  pyproject.toml
LakeMindMCP/LakeMindAdminMCP/: pyproject.toml
LakeMindMCP/LakeMindAdminMCP/config/: config.yaml
LakeMindMCP/LakeMindAssetMCP/: Dockerfile
LakeMindMCP/LakeMindAssetMCP/config/: config.yaml
LakeMindMCP/LakeMindAssetMCP/scripts/: verify_asset_mcp.py
LakeMindMCP/LakeMindDataMCP/: Dockerfile
LakeMindMCP/LakeMindDataMCP/config/: config.yaml
LakeMindMCP/config/: config.example.yaml  config.local.yaml  config.yaml
LakeMindMCP/docs/: admin.md  agent_quickstart.md  api.md
LakeMindMCP/scripts/: mcp_client_helpers.py  mock_embedding_server.py  verify_docker.py  verify_m1.py  verify_mcp.py
LakeMindMCP/src/lakemindmcp/: __init__.py  __main__.py  config.py  context.py  health.py  server.py
LakeMindModelServing/: .dockerignore  .env.example  DESIGN.md  Dockerfile  docker-compose.yml  pyproject.toml
LakeMindModelServing/config/: models.yaml
LakeMindModelServing/scripts/: verify_model_serving.py
LakeMindModelServing/src/lakemind_model_serving/: __main__.py  app.py  auth.py  config.py  gateway.py  registry.py
LakeMindMonitor/: .dockerignore  Dockerfile  README.md  docker-compose.yml  nuxt.config.ts  package.json  pyproject.toml  server.js  开发方案.md  改造方案.md
LakeMindMonitor/backend/: __init__.py  __main__.py  app.py  chat.py  config.py  mcp_client.py  metrics.py
LakeMindMonitor/config/: config.example.yaml  config.yaml
LakeMindMonitor/frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
LakeMindMonitor/frontend/src/: App.vue  api.js  main.js  router.ts
LakeMindMonitor/pages/: admin.vue  asset.vue  chat.vue  data.vue  index.vue
LakeMindMonitor/public/: index.html
LakeMindMonitor/public/assets/: index-B0_nXE47.css  index-BO34JZNy.css  index-BcO1gsbS.js  index-C8LeE4gA.js  index-CeOqW1H7.js  index-CkyqwP3o.css  index-DLrKvfl9.css
LakeMindMonitor/scripts/: verify_monitor.py
LakeMindMonitor/server/api/: chat.post.ts  health.get.ts  mcp.ts
LakeMindMonitor/static/: index.html
LakeMindMonitor/static/assets/: Chat-nHjVYFj3.js  Dashboard-Cmk6I3GU.js  DataMap-CXunTEnl.js  Experience-B3Nh80C8.js  Health-Dv7asjYN.js  Knowledge-D5j1xFqb.js  Memory-rF0MU97-.js  Skills-CNEXzp57.js  health-BV2J6zj9.js  index-DoKH1bo-.js
LakeMindServer/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.ray  Dockerfile.v2  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
LakeMindServer/config/: engines.yaml  versions.yaml
LakeMindServer/config/seaweedfs/: s3.json
LakeMindServer/docker/postgres-age/: .dockerignore  Dockerfile
LakeMindServer/docs/: configuration.md  installation.md  troubleshooting.md  usage.md
LakeMindServer/migrations/: env.py
LakeMindServer/migrations/versions/: 001_initial_schema.py  002_control_plane.py  003_asset_core.py  004_asset_types.py  005_job_runtime.py  006_model_management.py  007_auth_credentials.py  008_control_center_phase0.py  009_phase1a_core.py  010_meeting_user_role.py
LakeMindServer/scripts/: bootstrap.py  migrate_v01_to_v02.py  test_graph.sql  verify_pg_catalog.py  verify_ray.py  verify_scenario.py  verify_services.py  verify_v0.2.0.py
LakeMindServer/skills/knowledge-extract/: manifest.yaml
LakeMindServer/skills/meeting-asr/: manifest.yaml
LakeMindServer/skills/meeting-summary/: manifest.yaml
LakeMindServer/src/lakemind_server/: __main__.py  app.py  auth.py  config.py  db.py  engines.py
LakeMindServer/tests/e2e/: test_meeting_consistency.py  test_meeting_golden_path.py  test_meeting_recovery.py  test_meeting_security.py
LakeMindServer/tests/unit/: test_actions.py  test_asset_state_machine.py  test_crypto.py  test_job_state_machine.py  test_protected_namespace.py  test_security_context.py  test_tenant_isolation.py  test_token_parser.py
LakeMindSteward/: Dockerfile  README.md  pyproject.toml
LakeMindSteward/config/: config.yaml
LakeMindSteward/src/lakemind_steward/: __main__.py  agent.py  config.py  mcp_client.py  server.py
LakeMindTelemetryAgent/: Dockerfile  pyproject.toml
LakeMindTelemetryAgent/src/lakemind_telemetry_agent/: __init__.py  __main__.py
examples/lakemind-connector/: .env.example  README.md  pyproject.toml
examples/lakemind-connector/scripts/: register_skill.py  setup_tenant.py
examples/meeting-agent/: .dockerignore  .env.example  DESIGN.md  Dockerfile  README.md  UPGRADE_PLAN.md  agent.err  agent.py  docker-compose.yml  entrypoint.sh  lakemind_client.py  pyproject.toml
examples/meeting-agent/backend/: pyproject.toml
examples/meeting-agent/frontend/: index.html  package-lock.json  package.json  vite.config.ts
examples/meeting-agent/scripts/: check_db.py  check_detail.py  check_f50.py  check_frontend.py  check_knowledge.py  check_live.py  check_new.py  check_s3.py  check_segs.py  check_status.py  check_task.py  check_task_status.py  e2e_test.py  list_tables.py  pack_skill.py  publish_skill.py  rerun_final.py  save_memory.py  seed_models.py  setup.py  test_asr.py  test_mcp.py  test_roundtrip.py  test_s3_ray.py  verify_profiles.py
examples/meeting-agent/static/: app.js  index.html  style.css
(+409 files in other folders)
