[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lakemind-asset-mcp"
version = "0.1.0"
description = "LakeMind Asset MCP — 资产面"
requires-python = ">=3.11"
authors = [{ name = "LakeMind Team" }]

dependencies = [
    "mcp>=1.28,<2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "httpx>=0.27",
    "boto3>=1.34",
    "redis>=5.0",
    "pyarrow>=15.0",
    "pyiceberg[pyarrow,sql-postgres]>=0.11",
    "lancedb>=0.33",
    "lance>=1.2",
    "duckdb>=1.0",
    "fastembed>=0.4",
    "psycopg2-binary>=2.9",
]

[project.scripts]
lakemind-asset-mcp = "lakemind_asset_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lakemind_asset_mcp"]
