[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lakemindmcp"
version = "0.1.0"
description = "LakeMind MCP Server — 认知基础设施的唯一切面"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "LakeMind Team" }]

dependencies = [
    "mcp>=1.28,<2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "httpx>=0.27",
    "boto3>=1.34",
    "redis>=5.0",
    "pyarrow>=15.0",
    "pyiceberg[pyarrow,sql-sqlite]>=0.11",
    "lancedb>=0.33",
    "lance>=1.2",
    "duckdb>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
lakemindmcp = "lakemindmcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lakemindmcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
