[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lakemind-mcp-suite"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.28,<2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = [
    "LakeMindAssetMCP/src/lakemind_asset_mcp",
    "LakeMindDataMCP/src/lakemind_data_mcp",
    "LakeMindAdminMCP/src/lakemind_admin_mcp",
]
