[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lakemind-model-serving"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
    "litellm>=1.40",
    "fastembed>=0.4",
    "faster-whisper>=1.0",
    "cryptography>=42.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
lakemind-model-serving = "lakemind_model_serving.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lakemind_model_serving"]
