[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lakemind-monitor"
version = "0.1.0"
description = "LakeMind Monitor — 只读可观测性控制台 + Steward 对话窗"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "mcp>=1.28,<2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "prometheus-client>=0.20",
]

[project.scripts]
lakemind-monitor = "backend.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
