[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lakemind-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "boto3>=1.34",
    "redis>=5.0",
    "psycopg2-binary>=2.9",
    "pyarrow>=15.0",
    "pyiceberg[pyarrow,sql-postgres]>=0.11",
    "lancedb>=0.33",
    "pylance>=1.2",
    "duckdb>=1.0",
    "fastembed>=0.4",
    "ray[default]==2.41.0",
]

[project.scripts]
lakemind-server = "lakemind_server.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lakemind_server"]
