[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lakemind-steward"
version = "0.1.0"
description = "LakeMind Steward — management & ops agent"
requires-python = ">=3.11"
authors = [{ name = "LakeMind Team" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "langgraph>=0.2",
]

[project.scripts]
lakemind-steward = "lakemind_steward.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lakemind_steward"]
