[project]
name = "lakemind-telemetry-agent"
version = "0.2.2"
description = "LakeMind Telemetry Agent — read-only metrics collector"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
