[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lakemind-admin-mcp"
version = "0.1.0"
description = "LakeMind Admin MCP — management face"
requires-python = ">=3.11"
authors = [{ name = "LakeMind Team" }]

dependencies = [
    "mcp>=1.28,<2",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "httpx>=0.27",
]

[project.scripts]
lakemind-admin-mcp = "lakemind_admin_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lakemind_admin_mcp"]
